--- a/readme
+++ b/readme
@@ -477,7 +477,7 @@ If you encounter any issues, please [create an issue](https://github.com/youruse
 ## 🧑‍💻 Author
 
 **Your Name**  
-📫 [LinkedIn](https://www.linkedin.com/in/yourprofile) | 💼 [Portfolio](https://your-portfolio.com) | 🐙 [GitHub](https://github.com/yourusername)
+📫 [LinkedIn](https://www.linkedin.com/in/mridul-roy-39b297)  | 🐙 [GitHub](https://github.com/Mridul60)
 
 ---
 
